--- a/src/contact.ejs
+++ b/src/contact.ejs
@@ -1,3 +1,3 @@
 <%= require('./partials/header.ejs')(msg="contact") %>
     <div id="appContact"></div>
-<%= require('./partials/footer.ejs')()
+<%= require('./partials/footer.ejs')() %>
