--- a/src/contact.ejs
+++ b/src/contact.ejs
@@ -1,3 +1,3 @@
-<%= require('./partials/header.ejs')(msg="contact") %>
+<%= require('./partials/header.ejs')(msg="contactez-nous !") %>
     <div id="appContact"></div>
 <%= require('./partials/footer.ejs')() %>
