--- a/src/default.scss
+++ b/src/default.scss
@@ -29,3 +29,26 @@ footer{
     align-items: center;
     justify-content: center;
 }
+
+.container{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: flex-start;
+    gap: .5rem;
+}
+
+.card{
+    width: 25%;
+    min-width: 200px;
+    max-width: 250px;
+    border: 1px solid cadetblue;
+    border-radius: 5px;
+    margin-top: 1rem;
+    padding: 5px;
+}
+
+.logo{
+    width: 50px;
+    height: 50px;
+    border-radius: 100%;
+}
